UI: Fix Sidebar panel spacing

--- a/components/panel/style.scss
+++ b/components/panel/style.scss
@@ -57,6 +57,9 @@
 	margin: -15px;
 	font-size: inherit;
 }
+.components-panel__body.is-opened .components-panel__body-title {
+	margin-bottom: 0;
+}
 
 .components-panel__body-toggle.components-button {
 	position: relative;
